@@ -481,7 +481,7 @@ on_step1_activate                      (GtkMenuItem     *menuitem,
 	clist_refresh(store, TRUE);
     dbgregs_refresh_window();
 	dbgpclog_refresh_window();
-    //dbgmem_refresh_window();
+    dbgmem_refresh_window();
 	dbgstack_refresh_window();
 
     // force refresh !
@@ -500,7 +500,7 @@ on_step_over1_activate                 (GtkMenuItem     *menuitem,
 	clist_refresh(store, TRUE);
     dbgregs_refresh_window();
 	dbgpclog_refresh_window();
-    //dbgmem_refresh_window();
+    dbgmem_refresh_window();
 	dbgstack_refresh_window();
 
 	// force refresh !
@@ -516,7 +516,7 @@ on_step_out1_activate                 (GtkMenuItem     *menuitem,
 	clist_refresh(store, TRUE);
     dbgregs_refresh_window();
 	dbgpclog_refresh_window();
-    //dbgmem_refresh_window();
+    dbgmem_refresh_window();
 	dbgstack_refresh_window();
 
 	// force refresh !
@@ -558,7 +558,7 @@ on_run_to_cursor1_activate             (GtkMenuItem     *menuitem,
 	clist_refresh(store, FALSE);
     dbgregs_refresh_window();
 	dbgpclog_refresh_window();
-    //dbgmem_refresh_window();
+    dbgmem_refresh_window();
 	dbgstack_refresh_window();
 }
 
@@ -615,7 +615,7 @@ dbgcode_button6_clicked                     (GtkButton       *button,
     clist_refresh(store, FALSE);
     dbgregs_refresh_window();
 	dbgpclog_refresh_window();
-    //dbgmem_refresh_window();
+    dbgmem_refresh_window();
     dbgbkpts_refresh_window();
 	dbgstack_refresh_window();
 }
@@ -650,7 +650,7 @@ dbgcode_button7_clicked                     (GtkButton       *button,
     clist_refresh(store, FALSE);
     dbgregs_refresh_window();
 	dbgpclog_refresh_window();
-    //dbgmem_refresh_window();
+    dbgmem_refresh_window();
     dbgbkpts_refresh_window();
 	dbgstack_refresh_window();
 }
@@ -978,7 +978,7 @@ on_set_pc_to_selection1_activate       (GtkMenuItem     *menuitem,
     ti68k_register_set_pc(addr);
     dbgcode_refresh_window();
     dbgregs_refresh_window();
-    //dbgmem_refresh_window();
+    dbgmem_refresh_window();
 }
 
 GLADE_CB void
@@ -1064,7 +1064,7 @@ void gdbcallback_refresh_debugger(void)
 		dbgcode_refresh_window();
 		dbgregs_refresh_window();
 		dbgpclog_refresh_window();
-		//dbgmem_refresh_window();
+		dbgmem_refresh_window();
 		dbgstack_refresh_window();
 
 		// force refresh !
